# transacoes/src/routes/accountsRoutes.js
@@ -7,7 +7,7 @@ router
   .get('/api/admin/transactions', TransactionController.findTransactions)
   .get('/api/admin/transactions/:id', TransactionController.findTransactionById)
   .post('/api/admin/accounts', TransactionController.createAccount)
-  .put('/api/admin/transactions/status/:id', TransactionController.updateTransactionStatus)
+  .put('/api/admin/transactions/:id', TransactionController.updateTransactionStatus)
   .delete('/api/admin/accounts/:id', TransactionController.deleteAccount);
 
 export default router;
